# API-protocols

./: Readme.md  pyproject.toml
app/: crud.py  graphql.py  jsonrpc.py  main.py  rest.py  schemas.py  websocket.py
